--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,10 @@
-*{
+* {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgb(41, 44, 45);
 }
 
-.Nav ul{
-    display: flex;
-    align-items: center;
-    align-content: center;
-}
-
-.Nav ul li{
-    padding: 0 20px;
-    list-style-type: none;
-}
-
-
-.Header{
+.Header {
     display: flex;
     align-items: center;
     align-content: center;
@@ -26,7 +14,50 @@
     color: aliceblue;
 }
 
-.Hero{
+.Nav ul {
+    display: flex;
+    align-items: center;
+    align-content: center;
+    gap: 20px;
+}
+
+.Nav ul li {
+    list-style-type: none;
+    padding: 10px 20px;
+    position: relative;
+}
+
+.Nav ul li a {
+    color: aliceblue;
+    text-decoration: none;
+    transition: color 0.3s ease;
+}
+
+.Nav ul li.active::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 20%;
+    width: 60%;
+    height: 3px;
+    background-color: #00bcd4;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.Nav ul li:hover::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 20%;
+    width: 60%;
+    height: 3px;
+    background-color: #888;
+    border-radius: 5px;
+    transition: all 0.3s ease;
+}
+
+.Hero {
     display: flex;
     align-items: center;
     align-content: center;
@@ -34,8 +65,7 @@
     padding: 0 200px;
 }
 
-.welc{
+.welc {
     padding-top: 200px;
     width: 800px;
-} 
-
+}
