--- a/src/App.css
+++ b/src/App.css
@@ -1,71 +1,49 @@
 * {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(41, 44, 45);
 }
 
-.Header {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: space-between;
-    background-color: rgb(43, 49, 50);
-    padding: 20px 200px;
-    color: aliceblue;
+body{
+    background-color: var(--primary);
 }
 
-.Nav ul {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    gap: 20px;
+:root {
+    /*pallet*/
+    --primary: #191919;
+    --secondary: #222831;
+    --primary-dark: #191919;
+    --primary-light: #F6F6F6;
+
+    --background-primary: #191919;
+    --background-secondary: #222831;
+    --background-dark-light: #31363F;
+    
+    /*text*/
+    --text-white: #F6F6F6;
+    --text-secondary: #ECECEC;
+
+    /*border*/
+    --border-primary: #F6F6F6;
+    --border-secondary: #939393;
+    
+
+    /*simple*/
+    --white: #ffffff;
+    --black: #000000;
+    --gray: #6c757d;
+
+    /*more*/
+    --success: #28a745;
+    --error: #dc3545;
+    --warning: #ffc107;
+
+
+    /*optiom*/
+    --bg-light: #f8f9fa;
+    --bg-dark: #191919;
 }
 
-.Nav ul li {
-    list-style-type: none;
-    padding: 10px 20px;
-    position: relative;
-}
-
-.Nav ul li a {
-    color: aliceblue;
-    text-decoration: none;
-    transition: color 0.3s ease;
-}
-
-.Nav ul li.active::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 20%;
-    width: 60%;
-    height: 3px;
-    background-color: #00bcd4;
-    border-radius: 5px;
-    transition: all 0.3s ease;
-}
-
-.Nav ul li:hover::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 20%;
-    width: 60%;
-    height: 3px;
-    background-color: #888;
-    border-radius: 5px;
-    transition: all 0.3s ease;
-}
-
-.Hero {
-    display: flex;
-    align-items: center;
-    align-content: center;
-    justify-content: space-between;
-    padding: 0 200px;
-}
-
-.welc {
+.Welcome {
     padding-top: 200px;
     width: 800px;
 }
